; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_powerdomain.c_pwrdm_read_prev_pwrst.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_powerdomain.c_pwrdm_read_prev_pwrst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.powerdomain = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@OMAP3430_PM_PREPWSTST = common dso_local global i32 0, align 4
@OMAP3430_LASTPOWERSTATEENTERED_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pwrdm_read_prev_pwrst(%struct.powerdomain* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.powerdomain*, align 8
  store %struct.powerdomain* %0, %struct.powerdomain** %3, align 8
  %4 = load %struct.powerdomain*, %struct.powerdomain** %3, align 8
  %5 = icmp ne %struct.powerdomain* %4, null
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @EINVAL, align 4
  %8 = sub nsw i32 0, %7
  store i32 %8, i32* %2, align 4
  br label %16

9:                                                ; preds = %1
  %10 = load %struct.powerdomain*, %struct.powerdomain** %3, align 8
  %11 = getelementptr inbounds %struct.powerdomain, %struct.powerdomain* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @OMAP3430_PM_PREPWSTST, align 4
  %14 = load i32, i32* @OMAP3430_LASTPOWERSTATEENTERED_MASK, align 4
  %15 = call i32 @prm_read_mod_bits_shift(i32 %12, i32 %13, i32 %14)
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %9, %6
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @prm_read_mod_bits_shift(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
